[package]
name = "backup-photos"
version = "0.1.0"
edition = "2021"
description = "CLI tool to backup photos from Apple Photos to external storage"
authors = ["Levi Rogalla"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
fs_extra = "1.3"
walkdir = "2.4"
indicatif = "0.17"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
rayon = "1.8"
dirs = "5.0"
